# CDHCPRS

./: .env.example  .gitignore  README.md  README_en.md  问诊档案设计方案.md
backend/: .env.example  .gitignore  cleanup_db.py  diagnose_db.py  init_db.py  main.py  pyproject.toml  run.py
backend/core/: config.py  database.py  security.py
backend/models/: __init__.py  conversation.py  message.py  system_setting.py  user.py
backend/routers/: admin.py  auth.py  chat.py  public.py
backend/schemas/: __init__.py  conversation.py  message.py  settings.py  user.py
backend/services/: admin.py  auth.py  chat.py  llm.py  settings.py
frontend/: package-lock.json  package.json  pnpm-lock.yaml  tsconfig.app.json  vite.config.ts
frontend/i18n/: en-US.json  zh-CN.json
frontend/src/: App.vue  main.ts
frontend/src/api/: admin.ts  auth.ts  chat.ts  index.ts
frontend/src/components/: BackendStatus.vue  GlobalFooter.vue  GlobalNavbar.vue  LanguageSwitcher.vue  LargeFontModeSwitcher.vue  MarkdownRenderer.vue  SeniorModeSwitcher.vue  SuggestedQuestions.vue  UserInfoForm.vue
frontend/src/constants/: medicalData.ts
frontend/src/i18n/: index.ts
frontend/src/router/: index.ts
frontend/src/stores/: settings.ts  user.ts
frontend/src/styles/: design-system.ts  global.css  tcm-theme.css
frontend/src/views/: About.vue  Admin.vue  Chat.vue  Home.vue  Login.vue  Profile.vue  Register.vue
